# NC-PARSER

./: .dockerignore  .env.example  .gitignore  APPLY_BEST_PRACTICES.md  AUTHENTICATION_GUIDE.md  BYPASS_TRAEFIK_TEST.md  CHECK_ROUTING_CONFLICTS.md  CLEAN_INSTALL.md  COMPLETE_THE_FIX.md  CORRECT_TRAEFIK_CONFIG.md  CURRENT_STATUS_REPORT.md  Dockerfile  Dockerfile.gpu  EXACT_FIX.md  FINAL_RESOLUTION_REPORT.md  FINAL_SOLUTION.md  FINAL_SUCCESS_REPORT.md  FINAL_WEBHOOK_STATUS.md  FINAL_WORKING_SOLUTION.md  FUNDAMENTAL_DIAGNOSIS.md  MANUAL_AGGRESSIVE_FIX.md  MANUAL_DEEP_DEBUG.md  MANUAL_FIX_INSTRUCTIONS.md  NODERED_SETUP_SUMMARY.md  NUCLEAR_OPTIONS.md  QUICK_FIX.md  README.md  README_update.md  RESET_THROTTLING.md  SOLUTION_GUIDE.md  TRAEFIK_ANALYSIS.md  TRAEFIK_FIX_MANUAL.md  TROUBLESHOOTING.md  WEBHOOK_STATUS_REPORT.md  WEBHOOK_TEST_RESULTS.md  aggressive_fix.py  analyze_compose.py  analyze_traefik.py  apply_best_practices.sh  autorun.py  (+43 more)
docs/: GPU_SETUP.md  PHASED_PLAN.md  PHASED_PLAN_DETAILED.md  PROGRESS.md  TECH_CHOICES.md
docs/api/: README.md  openapi.yaml
scripts/: api_check_references.py  check_references.ps1  clean_data.ps1  e2e_chunk_upload.ps1  gen_references.ps1  generate_references.py  offline_check_references.py  quick_parse.py  run_api.ps1  run_api.sh  single_to_reference.py
src/nc_parser/api/: main.py
src/nc_parser/api/routes/: health.py  upload.py
src/nc_parser/core/: logging.py  metrics.py  settings.py  worker_metrics.py
src/nc_parser/processing/: captioning.py  parser.py
src/nc_parser/storage/: __init__.py  files.py
src/nc_parser/worker/: __init__.py  app.py  tasks.py
tests/: test_healthz.py
